# ai_service_engineering

./: .env.sample  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: CLAUDE.md
.devcontainer/: Dockerfile  devcontainer.json
docs/plan/: vod_plan.md
docs/section1/: README.md
docs/section1/lec01/: README.md
docs/section1/lec02/: README.md
docs/section1/lec03/: README.md
docs/section1/lec04/: README.md
docs/section1/lec05/: README.md
docs/section1/lec06/: README.md
docs/section1/lec07/: README.md
docs/section1/lec08/: README.md
docs/section1/lec09/: README.md
docs/section2/: README.md
docs/section2/lec01/: README.md
docs/section2/lec02/: README.md
docs/section2/lec03/: README.md
docs/section2/lec04/: README.md
docs/section2/lec05/: README.md
docs/section2/lec06/: README.md
docs/section2/lec07/: README.md
docs/section3/: README.md
docs/section3/lec01/: README.md
docs/section3/lec02/: README.md
docs/section3/lec03/: README.md
docs/section3/lec04/: README.md
docs/section3/lec05/: README.md
docs/section3/lec06/: README.md
docs/section3/lec07/: README.md
docs/section4/: README.md
docs/section4/lec01/: README.md
docs/section4/lec02/: README.md
docs/section4/lec03/: README.md
docs/section4/lec04/: README.md
docs/section4/lec05/: README.md
docs/section4/lec06/: README.md
docs/section4/lec07/: README.md
docs/section5/: README.md
docs/section5/lec01/: README.md
docs/section5/lec02/: README.md
src/section1/: __init__.py
src/section1/lec01/: __init__.py  smoke_test.py  smoke_test_2.py
src/section1/lec03/: ask.py  sampling_compare.py
src/section1/lec04/: first_call.py
src/section1/lec05/: prompt_patterns.py
src/section1/lec06/: provider_swap.py
src/section1/lec07/: local_call.py
src/section1/lec08/: json_traps.py
src/section1/lec09/: extract.py
src/section2/: __init__.py
src/section2/lec01/: __init__.py  collect.py
src/section2/lec02/: __init__.py  load.py
src/section2/lec03/: __init__.py  chunker.py
src/section2/lec04/: __init__.py  embedder.py
src/section2/lec05/: __init__.py  crud.py  query.py  store.py
src/section2/lec06/: __init__.py  mini_rag.py
src/section2/lec07/: __init__.py  app.py  evaluate.py  page.html
src/section3/: __init__.py
src/section3/lec01/: __init__.py  fc.py  llm.py
src/section3/lec02/: __init__.py  agent.py  async_agent.py  async_llm.py  bench.py
(+119 files in other folders)
