[project]
name = "ai-service-engineering"
version = "0.1.0"
description = "AI 서비스 엔지니어링 공통 VOD — 강의 자료 및 예제 코드"
requires-python = ">=3.13"
dependencies = [
    # LLM 접근 — 모든 생성 호출은 LiteLLM 단일 인터페이스를 경유한다.
    # 프로바이더별 SDK(google-genai/openai/anthropic)는 직접 의존성으로 넣지 않는다.
    "litellm>=1.40",
    "instructor>=1.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    # 데이터 & RAG 코어
    "pandas>=2.0",
    "numpy>=1.26",
    "chromadb>=0.5",
    # 임베딩은 LiteLLM 미경유 예외 — sentence-transformers로 HF 모델 직접 실행(CPU).
    "sentence-transformers>=3.0",
    # 에이전트
    "langgraph>=0.2",
    # 서빙
    "fastapi>=0.110",
    "uvicorn>=0.30",
    "pymupdf>=1.27.2.3",
    "langchain-text-splitters>=1.1.2",
    "mcp>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# src 레이아웃의 섹션 패키지를 설치형으로 노출한다. 그래야 `uv run python src/...`로
# 예제를 실행할 때도 단원 간 import(예: lec03이 lec02를 가져오기)가 동작한다.
[tool.hatch.build.targets.wheel]
packages = ["src/section1", "src/section2", "src/section3", "src/section4", "src/section5"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
# 단원마다 같은 이름의 테스트 파일(test_agent.py 등)을 두므로 importlib 모드로 충돌을 피한다
addopts = "--import-mode=importlib"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
